native/llama_dart_bridge/include/llama_dart.h

#define LLAMA_DART_ABI_VERSION 40u
typedef struct llama_dart_media_input {
  uint32_t struct_size;
  uint32_t type;
  const uint8_t *path_data;
  size_t path_size;
  const uint8_t *content_data;
  size_t content_size;
} llama_dart_media_input;
typedef struct llama_dart_chat_template_capabilities {
  uint32_t struct_size;
  uint8_t supports_tools;
  uint8_t supports_tool_calls;
  uint8_t supports_parallel_tool_calls;
} llama_dart_chat_template_capabilities;
typedef struct llama_dart_string_view {
  const uint8_t *data;
  size_t size;
} llama_dart_string_view;
typedef struct llama_dart_completion_config {
  uint32_t struct_size;
  const uint8_t *prompt_data;
  size_t prompt_size;
  /* Zero evaluates the prompt without sampling a token. */
  uint32_t max_tokens;
  float temperature;
  int32_t top_k;
  float top_p;
  float min_p;
  float typical_p;
  int32_t penalty_last_n;
  float repeat_penalty;
  float frequency_penalty;
  float presence_penalty;
  uint8_t mirostat;
  float mirostat_tau;
  float mirostat_eta;
  const uint8_t *grammar_data;
  size_t grammar_size;
  const uint8_t *grammar_root_data;
  size_t grammar_root_size;
  const llama_dart_string_view *stop_sequences;
  size_t stop_sequence_count;
  uint32_t seed;
  /* A llama_dart_add_special_mode value. */
  uint8_t add_special;
  uint8_t parse_special;
  const llama_dart_media_input *media_inputs;
  size_t media_input_count;
  const uint8_t *json_schema_data;
  size_t json_schema_size;
  const uint8_t *chat_plan_data;
  size_t chat_plan_size;
  const int32_t *stop_tokens;
  size_t stop_token_count;
} llama_dart_completion_config;
typedef struct llama_dart_completion_stats {
  uint32_t struct_size;
  uint32_t prompt_tokens;
  uint32_t generated_tokens;
  double prompt_eval_ms;
  double decode_ms;
  double total_ms;
  double time_to_first_token_ms;
  uint32_t speculative_draft_tokens;
  uint32_t speculative_accepted_tokens;
  double speculative_draft_ms;
  double speculative_verify_ms;
  /* A llama_dart_stop_reason value. */
  uint32_t stop_reason;
} llama_dart_completion_stats;
typedef struct llama_dart_buffer {
  uint8_t *data;
  size_t size;
} llama_dart_buffer;
typedef struct llama_dart_float_buffer {
  float *data;
  size_t length;
} llama_dart_float_buffer;
typedef struct llama_dart_embedding_config {
  uint32_t struct_size;
  const uint8_t *text_data;
  size_t text_size;
  uint8_t add_special;
  uint8_t parse_special;
} llama_dart_embedding_config;
typedef struct llama_dart_rerank_config {
  uint32_t struct_size;
  const uint8_t *query_data;
  size_t query_size;
  const uint8_t *document_data;
  size_t document_size;
  uint8_t add_special;
  uint8_t parse_special;
} llama_dart_rerank_config;
typedef struct llama_dart_lora_load_config {
  uint32_t struct_size;
  const uint8_t *path_data;
  size_t path_size;
} llama_dart_lora_load_config;
typedef struct llama_dart_chat_message {
  uint32_t struct_size;
  const uint8_t *role_data;
  size_t role_size;
  const uint8_t *content_data;
  size_t content_size;
} llama_dart_chat_message;