lib/src/ffi/generated_bindings.dart


  @ffi.Uint8()
  external int kv_cache_offload;

  @ffi.Uint8()
  external int swa_full;

  @ffi.Uint8()
  external int kv_unified;
}

final class llama_dart_chat_template_capabilities extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint8()
  external int supports_tools;

  @ffi.Uint8()
  external int supports_tool_calls;

  @ffi.Uint8()
  external int supports_parallel_tool_calls;
}

final class llama_dart_string_view extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;

  @ffi.Size()
  external int size;
}

final class llama_dart_completion_config extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  external ffi.Pointer<ffi.Uint8> prompt_data;

  @ffi.Size()
  external int prompt_size;

  @ffi.Uint32()
  external int max_tokens;

  @ffi.Float()
  external double temperature;

  @ffi.Int32()
  external int top_k;

  @ffi.Float()
  external double top_p;

  @ffi.Float()
  external double min_p;

  @ffi.Float()
  external double typical_p;

  @ffi.Int32()
  external int penalty_last_n;

  @ffi.Float()
  external double repeat_penalty;

  @ffi.Float()
  external double frequency_penalty;

  @ffi.Float()
  external double presence_penalty;

  @ffi.Uint8()
  external int mirostat;

  @ffi.Float()
  external double mirostat_tau;

  @ffi.Float()
  external double mirostat_eta;

  external ffi.Pointer<ffi.Uint8> grammar_data;

  @ffi.Size()
  external int grammar_size;

  external ffi.Pointer<ffi.Uint8> grammar_root_data;

  @ffi.Size()
  external int grammar_root_size;

  external ffi.Pointer<llama_dart_string_view> stop_sequences;

  @ffi.Size()
  external int stop_sequence_count;

  @ffi.Uint32()
  external int seed;

  @ffi.Uint8()
  external int add_special;

  @ffi.Uint8()
  external int parse_special;

  external ffi.Pointer<llama_dart_media_input> media_inputs;

  @ffi.Size()
  external int media_input_count;

  external ffi.Pointer<ffi.Uint8> json_schema_data;

  @ffi.Size()
  external int json_schema_size;

  external ffi.Pointer<ffi.Uint8> chat_plan_data;

  @ffi.Size()
  external int chat_plan_size;

  external ffi.Pointer<ffi.Int32> stop_tokens;

  @ffi.Size()
  external int stop_token_count;
}

final class llama_dart_completion_stats extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int prompt_tokens;

  @ffi.Uint32()
  external int generated_tokens;

  @ffi.Double()
  external double prompt_eval_ms;

  @ffi.Double()
  external double decode_ms;

  @ffi.Double()
  external double total_ms;

  @ffi.Double()
  external double time_to_first_token_ms;

  @ffi.Uint32()
  external int speculative_draft_tokens;

  @ffi.Uint32()
  external int speculative_accepted_tokens;

  @ffi.Double()
  external double speculative_draft_ms;

  @ffi.Double()
  external double speculative_verify_ms;

  @ffi.Uint32()
  external int stop_reason;
}

final class llama_dart_buffer extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;

  @ffi.Size()
  external int size;
}

final class llama_dart_float_buffer extends ffi.Struct {
  external ffi.Pointer<ffi.Float> data;

  @ffi.Size()
  external int length;
}

final class llama_dart_embedding_config extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  external ffi.Pointer<ffi.Uint8> text_data;

  @ffi.Size()
  external int text_size;

  @ffi.Uint8()
  external int add_special;

  @ffi.Uint8()
  external int parse_special;
}

final class llama_dart_rerank_config extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  external ffi.Pointer<ffi.Uint8> query_data;

  @ffi.Size()
  external int query_size;

  external ffi.Pointer<ffi.Uint8> document_data;

  @ffi.Size()
  external int document_size;

  @ffi.Uint8()
  external int add_special;

  @ffi.Uint8()
  external int parse_special;
}

final class llama_dart_lora_load_config extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  external ffi.Pointer<ffi.Uint8> path_data;

  @ffi.Size()
  external int path_size;
}

final class llama_dart_chat_message extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  external ffi.Pointer<ffi.Uint8> role_data;

  @ffi.Size()
  external int role_size;

  external ffi.Pointer<ffi.Uint8> content_data;

  @ffi.Size()
  external int content_size;
}

const int LLAMA_DART_ABI_VERSION = 40;
